test(kpis): fix test instability with kpi unit test
relates to OPT-6257